# Patchcord

./: .gitignore  LICENSE
backend/: pyproject.toml  test.db
backend/alembic/: env.py
backend/alembic/versions/: 47af7b12090a_first_migration.py  66e3dc998d39_channel_admin_and_moderator.py  68dcdfbc1d4c_first_migration.py  97c5f43cd232_initial_migration.py
backend/app/: main.py
backend/app/api/: auth_routes.py  channel_routers.py  status_routes.py  user_routes.py  user_statuses_routes.py
backend/app/api/auth/: auth_routes.py
backend/app/api/user/: user_routes.py
backend/app/core/: exceptions.py
backend/app/db/: database.py
backend/app/db/models/: __init__.py  channel.py  channel_membership.py  direct_message.py  file.py  message.py  reaction.py  role.py  user.py  user_status.py
backend/app/schemas/: channel_create_request.py  channel_update_request.py  status_update_request.py  user_create_request.py
backend/app/services/auth/: auth_service.py  google_oauth.py  oauth_client.py  user_service.py
backend/app/tests/: test_channel.py
backend/app/utils/: auth_utils.py  channel_utils.py  dependencies.py  jwt_utils.py
frontend/: package-lock.json
